# dahdit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix  index.html  tap-morse.html
.github/workflows/: pages.yml  test.yml
bindings/: README.md
bindings/abi-wasm/: morse_abi.c  morse_abi.h
bindings/javascript/: Makefile  README.md  demo.html  morse.js  morse.wasm  package.json  test.js
bindings/javascript/wrapper/: morse.js  package-lock.json  package.json  test.js
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs  support.rs
core/: Cargo.toml  Makefile  README.md  build.rs  english_3grams.csv  generate_morse.h  interpret_morse.c  interpret_morse.h  main.c  morse.c  morse.h  rustfmt.toml  test.c  wav.c  wav.h
core/src/: audio.rs  interpret.rs  lib.rs  patterns.rs  timing.rs  types.rs  wasm.rs
