[package]
name = "morse-core"
version = "1.0.0"
edition = "2021"
description = "Fast Morse code generation and audio synthesis"
license = "MIT"
authors = ["Josh Moody"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wasm"]
wasm = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

