[package]
name = "morse-core"
version = "1.0.0"
edition = "2021"
description = "Fast Morse code generation and audio synthesis"
license = "MIT"
authors = ["Josh Moody"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional WASM dependencies
wasm-bindgen = { workspace = true, features = ["serde-serialize"], optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

