[package]
name = "morse-core"
version = "1.0.0"
edition = "2021"
description = "Fast Morse code generation and audio synthesis"
license = "MIT"
authors = ["Josh Moody"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

