[package]
name = "morse-wasm"
version = "1.0.0"
edition = "2021"
description = "WebAssembly bindings for morse-core"
license = "MIT"
authors = ["Josh Moody"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
morse-core = { path = "../../core" }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
